--- a/index.html
+++ b/index.html
@@ -87,14 +87,12 @@
                     <h2 class="heading">Work Experience</h2>
                     <div class="content">
                         <div class="item" name="professional Leet-coder">
-                            <h3 class="title">Software Engineering Position <span class="place">
-                    <a href="#">Company A</a>
+                            <h3 class="title">LeetCode Professional <span class="place">
+                    <a href="#"> The Internet</a>
                   </span>
-                                <span class="year">(2017-2021)</span>
+                                <span class="year">(2020-2024)</span>
                             </h3>
-                            <p> • Participated in Agile software development through scrum sprint cycles, daily stand-up
-                                team
-                                meetings, product planning and grooming sessions, and weekly sprint follow-up reports.
+                            <p> • Participated in and finished over 100 Leetcode problems.
                                 <br>
                                 • Developed RESTful Java Spring Boot applications using standardized, company-wide
                                 software
