--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     <div class="container">
         <img class="profile-image img-responsive pull-left" src="assets/images/avatar.png" alt="Avatar"/>
         <div class="profile-content pull-left">
-            <h1 class="name">James Gosling</h1>
+            <h1 class="name">Trevor Bazen</h1>
             <h2 class="desc">Jr Java Developer</h2>
             <ul class="social list-inline">
                 <li class="list-inline-item">
@@ -76,7 +76,7 @@
                     <div class="featured-image has-ribbon" style="background-color:black">
                         <a href="https://github.com/uncg-csc340/dyvert" target="_blank">
                             <img class="img-fluid project-image rounded shadow-sm"
-                                 src="assets/images/projects/dyvert.png" alt="project name"
+                                 src="assets/images/projects/truckshare.png" alt="project name"
                                  style="width:80%"/>
                         </a>
                         <div class="ribbon">
@@ -85,17 +85,17 @@
                     </div>
 
                     <h3 class="title mb-3"><a href="https://github.com/uncg-csc340/dyvert"
-                                              target="_blank">Dyvert</a>
+                                              target="_blank">TruckShare</a>
                     </h3>
 
                     <div class="desc text-start">
-                        <p>The goal of the DyVert web application is to connect users to new media content and to
-                            provide an interactive method of bookmarking interesting content. Content Creators
-                            create content cards describing the media, genre, synopsis, and other details. Users are
-                            presented with the content cards, and they either swipe right to add the card to their
-                            collection or left to discard the card. Users can filter content cards shown to them
-                            based on media type and/or genre. Users can also add reviews for any media that is part
-                            of their collection. Admins are responsible for content moderation and membership. </p>
+                        <p>For people that don't have a truck and wants to get stuff moved, and for people that have a truck that wants it to be fully utilized and monetized.
+
+                            Customers on our platform can make listings to seek trucks and tools owners in the area. They can also browse available listings created by the providers.
+
+                            Providers can also list their available trucks and tools on our platform, provide a description of the items for rent, pricing, liability and insurance requirement.
+
+                            SysAdmins provide moderation to the platform, remove inappropriate listings, and provide conflict resolutions. </p>
                     </div><!--//desc-->
                     <a class="btn btn-cta-secondary" href="https://github.com/uncg-csc340/dyvert" target="_blank"><i
                             class="fa fa-thumbs-up"></i> Back my project</a>
